--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-import './App.css';
-import 'bootstrap/dist/css/bootstrap.css'
-import Navbar from './Components/Navbar';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-function App() {
-  return (
-    <div className="App">
-      <header className="App-header">
-        {/* <div className="container">
-          <div className="row">
-            <div className="col-6">asdasd</div>
-            <div className="col-2">asdasd</div>
-            <div className="col-4">asdasd</div>
-          </div>
-        </div> */}
-        <Navbar />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Sunnyside agency landing page</title>
 
-      {/* <p>About
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
+</head>
+<body>
+  About
   Services
   Projects
   Contact
@@ -59,14 +59,10 @@ function App() {
   Services
   Projects
   Contact
-  </p>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div> */}
-      </header>
-    </div>
-  );
-}
-
-export default App;
+  </div>
+</body>
+</html>
